# diff-poetry-lock

./: .gitignore  Dockerfile  LICENSE  README.md  action.yaml  pyproject.toml
.github/workflows/: linters.yaml
diff_poetry_lock/: github.py  run_poetry.py  settings.py
diff_poetry_lock/test/: test_poetry_diff.py
