[tool.poetry]
name = "diff-poetry-lock"
version = "1.0.1.dev0"
description = "A CI check that post to GitHub a summary of all changes within the poetry.lock file to a pull request"
authors = ["Nils Borrmann"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.4.0"
requests = "^2.28.2"
pydantic = "^1.10.6"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
black = "^23.1.0"
ruff = "^0.0.254"
mypy = "^1.1.1"
types-requests = "^2.28.11.15"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 120

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
select = ["ALL"]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D211", "D213",  # missing docstrings
    "ANN101",  # missing type annotation for self
    "TRY002", "TRY003", "EM101", "EM102",  # exception handling
    "T201", # disallow print
    "PTH123",
]
line-length = 120

[tool.ruff.per-file-ignores]
"diff_poetry_lock/test/*" = ["S101", "PLR2004", "S105", "S106"]  # hardcoded values
